--- a/style/events.css
+++ b/style/events.css
@@ -9,7 +9,7 @@
 
 }
 
-.day-events section > h4,
+/*.day-events section > h4,*/
 .day-events section > ol li {
   padding: 1rem 0px;
 }
@@ -49,14 +49,31 @@
   padding-right: 0.37rem;
 }
 
+
 .day-events section > h4 {
-  border-left: 0.4rem solid #FCA900;
-/*  font-size:  1rem;*/
-  width: 2.8rem;
+  width: 6rem;
+  height: 100%;
+  display: table;
 }
 
-.day-events section > ol,
-.day-events section > ol li  {
+.day-events section > h4 > span {
+  display: table-cell;
+  height: 100%;
+  vertical-align: top;
+  padding-top: 1rem;
+}
+
+.day-events section > h4 > .display-hour {
+  display: block;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+.day-events section > h4 .calendar-color {
+  padding: 0px
+  display: block;
+  width: 0.5rem;
+  margin-right: 0.4rem;
 }
 
 .day-events section > ol {
