--- a/style/toolbars.css
+++ b/style/toolbars.css
@@ -1,32 +1,16 @@
-header {
-  position: relative;
-  border-bottom: 0.1rem solid #992f21;
-  background-image: -moz-linear-gradient(#B84F00, #AB3319);
-  box-shadow: 0px -1px 4px 1px black;
-  width: 100%;
-  padding: 1.2rem 0;
-  font-size: 2.2rem;
-  height: 5rem;
-  line-height: 3rem;
-  color: white;
-  vertical-align: center;
-}
 
-
-.rtl header h1,
-.rtl header a {
-  float: right;
-}
-
-.add-icon,
 .done-icon,
 .save-icon,
 .back-icon,
 .cancel-icon,
-#hide-settings,
-#show-settings {
+#hide-settings {
   width: 30px;
   height: 30px
+}
+
+#time-header > button a {
+  width: 100%;
+  height: 100%;
 }
 
 .cancel-icon {
@@ -47,8 +31,7 @@ header {
 }
 
 
-#hide-settings,
-#show-settings {
+#hide-settings{
   display: none;
   background: transparent url('/style/icons/HeaderIcon_30x30_menu.png') no-repeat;
 }
@@ -61,29 +44,7 @@ body[data-path="/settings/"] #hide-settings {
   display: block;
 }
 
-#show-settings {
-  display: block;
-}
-
 header a.done {
   text-indent: 0em;
   color: white;
 }
-
-header a {
-  display: inline-block;
-  float: left;
-  text-indent: -9999em;
-  width: 30px;
-}
-
-header h1 {
-  width: -moz-calc(100% - 70px);
-  float: left;
-  font-family: 'Open Sans';
-  font-weight: light;
-  text-align: left;
-  font-weight: normal;
-  padding: 0 0.6rem;
-}
-
