--- a/style/ui.css
+++ b/style/ui.css
@@ -151,11 +151,11 @@ ol.link-list a {
 
 /* add event view */
 
-#modify-event-view fieldset {
+#modify-event-view form {
   margin: 1rem;
 }
 
-#modify-event-view fieldset ol li {
+#modify-event-view form ol li {
   margin: 0rem;
 }
 
