--- a/style/forms.css
+++ b/style/forms.css
@@ -20,48 +20,10 @@ input[type="checkbox"] {
   width: inherit;
 }
 
-.ltr input,
-.ltr textarea,
-.ltr select,
-.ltr option {
-  text-align: left;
-}
-
-
-.rtl input,
-.rtl textarea,
-.rtl select,
-.rtl option {
-  text-align: right
-}
-
 form,
 form ol {
   margin: 0px;
   padding: 0px;
-}
-
-label[role="listbox"] select:focus option.default {
-  display: none;
-}
-
-label[role="checkbox"] {
-  display: block;
-}
-
-label[role="checkbox"] span {
-  padding: 2px 0.5rem 0;
-  display: block;
-}
-
-.rtl label[role="checkbox"] input,
-.rtl label[role="checkbox"] span {
-  float: left;
-}
-
-.ltr label[role="checkbox"] span,
-.ltr label[role="checkbox"] input {
-  float: right;
 }
 
 /* for calendar */
@@ -80,13 +42,14 @@ form li {
 
 li.end-date,
 li.start-date {
-  width: 70%;
+  width: 60%;
   float: left;
 }
 
 form li.end-time,
 form li.start-time {
-  width: calc(30% - 1px);
+  text-align: center;
+  width: calc(40% - 1px);
   float: left
 }
 
@@ -97,9 +60,4 @@ form li.notes  {
 form li.notes textarea {
   padding: 1rem;
   height: 80%;
-}
-
-form li.notes,
-form li.repeat {
-  clear: both;
 }
