--- a/style/ui.css
+++ b/style/ui.css
@@ -1,23 +1,3 @@
-/*
-COLORS
-
-BUSY BACKGROUND: #CCC
-BORDER: #AAA;
-CALENDER BORDER: #B0B0B0
-MONTH DAY BG: #FFF
-MONTH DAY PAST BG: #A8A8A8
-MONTH DAY PAST COLOR: #666
-MONTH DAY TODAY BORDER COLOR: #444
-MONTH DAY SELECTED BG: #444
-MONTH DAY SELECTED COLOR: white
-
-MONTHS DAY TOOLBAR BG: #E2E2E2
-MONTHS DAY EVENT: #CACACA 
-
-EVENT TIME COLOR: #333
-*/
-
-
 /* Device Layouts */
 
 @media screen and (max-width: 480px) {
@@ -55,27 +35,27 @@ ol.link-list a {
   text-decoration: none;
   color: #333;
   background: transparent url('icons/ActionIcons_30x30_forward_nav.png') no-repeat right;
+  margin-left: 2rem;
 
-}
-
-#wrapper {
-  z-index: 100;
-  height: 100%;
 }
 
 /* view management */
 
-#views {
+#time-header > menu {
+  display: none;
+}
+
+#time-views {
+  height: 100%;
+}
+
+#time-views > section {
+  display: none;
   background: white;
-  height: -moz-calc(100% - 8rem);
+  height: calc(100% - 8.33rem);
 }
 
-#views > section {
-  display: none
-}
-
-
-#views > section.active {
+#time-views > section.active {
   display: block;
 }
 
@@ -101,12 +81,12 @@ ol.link-list a {
 
 /* view heights */
 
-#month-view {
-  height: 65%;
+#time-views > #month-view {
+  height: calc(65% - 5rem);
 }
 
-#month-days-view {
-  height: 35%;
+#time-views > #months-day-view {
+  height: calc(35% - 3.33rem);
 }
 
 
@@ -119,6 +99,11 @@ ol.link-list a {
 }
 
 /* advanced settings */
+
+#advanced-settings-view .account-list {
+  overflow-y: scroll;
+  height: calc(100% - 5rem);
+}
 
 #advanced-settings-view .account-list a {
   padding-right: 4rem;
@@ -144,12 +129,16 @@ ol.link-list a {
 
 /* modify account view */
 
-#modify-account-view.preset-google .fullUrl,
-#modify-account-view.preset-yahoo .fullUrl {
+#modify-account-view.preset-google .full-url,
+#modify-account-view.preset-yahoo .full-url {
   display: none;
 }
 
 /* add event view */
+
+#modify-event-view header > menu {
+  display: none;
+}
 
 #modify-event-view form {
   margin: 1rem;
@@ -159,10 +148,15 @@ ol.link-list a {
   margin: 0rem;
 }
 
+.fullscreen-view.active {
+  visibility: visible;
+}
+
 .fullscreen-view {
+  z-index: 1000;
+  visibility: hidden;
   /* completely override other views */
   background: #E6E6E0;
-  z-index: 110;
   position: absolute;
   top: 0px;
   width: 100%;
@@ -179,10 +173,11 @@ ol.link-list a {
   text-align: left;
 }
 
-/* common top toolbars */
+body[role="application"] section[role="region"] > header h1 {
+  margin-left: 0 !important;
+}
 
 
-/* month view */
 /* sub common: day headers, day boxes */
 
 #month-days {
@@ -191,7 +186,7 @@ ol.link-list a {
 
 #month-view .month li,
 #month-days li {
-  width: 14.28%;
+  width: 14.286%;
   line-height: 120%;
   -moz-user-select: none;
 }
@@ -209,16 +204,16 @@ ol.link-list a {
 /* sub: day header row */
 
 #month-days {
-  height: 1.45rem;
-  clear: both;
+  overflow: hidden;
 }
 
 #month-days li {
+  height: 2rem;
   color: white;
   text-align: center;
   background-color: #242931;
   text-transform: uppercase;
-  font-size: 110%;
+  font-size: 1.3rem;
   padding: 0.185rem 0;
   border-right: 1px solid #131314;
   border-left: 1px solid #515051;
@@ -232,16 +227,25 @@ ol.link-list a {
   border-right: none;
 }
 
-#month-displays {
-  height: -moz-calc(100% - 1.45rem);
-  width:300%;
+body[data-path^="/month/"] section.month.next,
+body[data-path^="/month/"] section.month.previous {
+  display: block !important;
+}
+
+section.month.previous,
+section.month.next {
+  display: none !important;
 }
 
 section.month {
-  height: 100%;
+  top: 4.9rem;
+  overflow: hidden;
+  height: calc(65% - 5rem);
+  position: absolute;
   color: #484848;
-  float:left;
-  width:33.3%;
+  width: 100%;
+  border-left: 1px solid #AAA;
+  border-right: 1px solid #AAA;
   display: none;
 }
 
@@ -249,12 +253,6 @@ section.month {
 
 section.month.active {
   display: block;
-}
-
-section.month {
-  overflow: hidden;
-  border-left: 1px solid #AAA;
-  border-right: 1px solid #AAA;
 }
 
 section.month li > .day {
@@ -279,11 +277,15 @@ section.month li > .day {
 }
 
 section.month ol {
-  height: 20%;
+  height: calc(20% - (2rem / 5));
 }
 
-section.six-weeks ol {
-  height: 16.7% !important; 
+section.month.weeks-4 ol {
+  height: calc(25% - (2rem / 4));
+}
+
+section.month.weeks-6 ol {
+  height: calc(16.7% - (2rem / 6));
 }
 
 section.month li:first-child {
@@ -406,13 +408,8 @@ Indicators are in units of 12
 
 /* sub: months day view */
 
-#months-day-view {
-  background-color: white;
-  height: -moz-calc(50% - 1.295rem);
-}
-
 #months-day-view .day-events {
-  height: -moz-calc(100% - 7.7rem);
+  height: -moz-calc(100% - 3rem);
   display: -moz-box;
   -moz-box-orient: vertical;
   overflow-y: auto;
@@ -423,8 +420,6 @@ Indicators are in units of 12
   font-size: 1.15rem;
   padding: 1.2rem 1.2rem 0.7rem;
   text-transform: uppercase;
-  font-family: 'Open Sans';
-  font-weight: light;
   color: #F93700;
   border-bottom: 1px solid #F93700;
   box-shadow: 0px 4px 5px -1px #888 inset;
@@ -432,25 +427,16 @@ Indicators are in units of 12
 
 /** sub: view selector **/
 
-#bottom-toolbar menu {
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-}
-
-#bottom-toolbar,
-#view-selector li,
-#view-selector,
 #view-selector menu {
+  padding: 0;
   height: 3.33rem;
-}
-
-#bottom-toolbar {
-  height: 3.33rem;
-  background: #949494;
 }
 
 #view-selector {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  background: #949494;
   line-height: 2.1rem;
   overflow: hidden;
   box-shadow: 0px 0 0.5px 0.5px #6F7070;
@@ -509,12 +495,10 @@ body[data-path="/month/"] #view-selector .month a {
 }
 
 #view-selector > li {
-  height: 2.18rem;
   text-align: center;
   font-weight: bold;
   color: black;
   display: block;
-  width: 100%;
   font-size: 1.2rem;
 }
 
