Calendar - Offline Event Creation/Deletion/Editing

--- a/style/ui.css
+++ b/style/ui.css
@@ -41,10 +41,6 @@ ol.link-list a {
 
 /* view management */
 
-#time-header > menu {
-  display: none;
-}
-
 #time-views {
   height: 100%;
 }
@@ -135,16 +131,20 @@ ol.link-list a {
 
 /* add event view */
 
-#modify-event-view header > menu {
-  display: none;
-}
-
 #modify-event-view form {
   margin: 1rem;
 }
 
 #modify-event-view form ol li {
   margin: 0rem;
+}
+
+#modify-event-view.update .calendar-id {
+  display: none;
+}
+
+#modify-event-view.create .current-calendar {
+  display: none;
 }
 
 .fullscreen-view.active {
