--- a/style/ui.css
+++ b/style/ui.css
@@ -175,7 +175,7 @@ ol.link-list a {
 /* add event view */
 
 #modify-event-view form {
-  margin: 1rem;
+  margin: 1rem 1rem 0 1rem;
 }
 
 #modify-event-view form ol li {
@@ -233,11 +233,6 @@ ol.link-list a {
   top: 0px;
   width: 100%;
   height: 100%
-}
-
-.fullscreen-view .delete-record {
-  position: absolute;
-  bottom: 0px;
 }
 
 body[role="application"] section[role="region"] > header h1 {
