--- a/style/modify_event_view.css
+++ b/style/modify_event_view.css
@@ -59,7 +59,7 @@
   display: none;
 }
 
-
+#modify-event-view.readonly menu,
 #modify-event-view.create .delete-record,
 #modify-event-view.readonly .delete-record {
   display: none;
