--- a/style/modify_event_view.css
+++ b/style/modify_event_view.css
@@ -26,6 +26,7 @@
 #modify-event-view li.notes textarea {
   padding: 1rem;
   height: 100%;
+  line-height: 1.3em;
 }
 
 #modify-event-view li.allday {
