Bug 838031 - Split calendar view/edit pages

--- a/style/modify_event_view.css
+++ b/style/modify_event_view.css
@@ -97,3 +97,7 @@
 #modify-event-view.update .save .save-text {
   display: none;
 }
+
+#modify-event-view .save[aria-disabled="true"] {
+  pointer-events: none;
+}
