Bug 835887 - [Calendar UX VD] "Remove account" overlay button should be red

--- a/style/modify_account_view.css
+++ b/style/modify_account_view.css
@@ -69,6 +69,10 @@
   display: none;
 }
 
+#remove-account-dialog p {
+  font-size: 2.2rem;
+}
+
 #modify-account-view.auth-oauth2.create .user,
 #modify-account-view .sync-errors,
 #modify-account-view .oauth2-sign-in {
