--- a/style/ui.css
+++ b/style/ui.css
@@ -56,9 +56,7 @@ ol.link-list li:only-child a {
   border-right: 0.1rem solid #F2F2F2;
 }
 
-body[data-path="/month/"] #view-selector > .month > a,
-body[data-path="/week/"] #view-selector > .week > a,
-body[data-path="/day/"] #view-selector > .day > a {
+#view-selector a[aria-selected="true"] {
   color: #00aacc;
   font-weight: 500;
 }
@@ -111,6 +109,15 @@ body[data-path="/day/"] #view-selector > .day > a:active {
 
 #time-views > section.active {
   display: block;
+}
+
+#time-header [type="toolbar"] {
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.settings-drawer-visible #time-header [type="toolbar"] {
+  opacity: 0;
 }
 
 /* view loading */
@@ -178,6 +185,16 @@ body[data-path="/day/"] #view-selector > .day > a:active {
   overflow-y: scroll;
 }
 
+#advanced-settings-view .create-account-item {
+  text-align: center;
+}
+
+#advanced-settings-view button {
+  margin: 1.1rem auto;
+  width: calc(100% - 3rem);
+  text-align: center;
+}
+
 #advanced-settings-view .settings-list label {
   height: auto;
   margin: 0 1.5rem;
@@ -222,6 +239,15 @@ body[data-path="/day/"] #view-selector > .day > a:active {
   width: calc(100% - 3rem);
 }
 
+/* For the account listing, want the final child to still have
+   a bottom border to separate it from the Add Account button */
+#advanced-settings-view .account-list li:last-child label,
+#advanced-settings-view .account-list li:only-child label,
+#advanced-settings-view .account-list li:last-child a,
+#advanced-settings-view .account-list li:only-child a {
+  border-bottom: 0.1rem solid #C5C5C5;
+}
+
 #advanced-settings-view .account-list a {
   padding-right: 4rem;
 }
@@ -237,14 +263,6 @@ body[data-path="/day/"] #view-selector > .day > a:active {
 
 #advanced-settings-view .user {
   width: 50%;
-}
-
-#advanced-settings-view header.account-list-header.active {
-  display: block;
-}
-
-#advanced-settings-view header.account-list-header {
-  display: none;
 }
 
 /* create account view */
