--- a/style/event_view.css
+++ b/style/event_view.css
@@ -16,26 +16,65 @@
 }
 
 #event-view ul {
-  padding: 0;
+  margin: 0;
+  padding: 2rem 1.8rem;
   list-style-type: none;
-  font-size: 1.6rem;
-  line-height: 3.4rem;
-}
-
-#event-view li {
-  position: relative;
-  padding: 0 1.8rem;
-  margin-bottom: 0.4rem;
-}
-
-#event-view .start-date,
-#event-view .description {
-  border-top: 1px solid #ccc;
-  margin-top: 0.8rem;
-  padding-top: 0.8rem;
 }
 
 #event-view .content {
   word-wrap: break-word;
   -moz-hyphens: auto;
+}
+
+#event-view .description {
+  border-top: 1px solid #BDBDBD;
+  padding-top: 1rem;
+  margin-top: 1.5rem;
+}
+
+#event-view ul .content,
+#event-view ul span[data-l10n-id="reminder"] {
+  line-height: 2rem;
+  font-size: 1.4rem;
+  color: #707070;
+}
+
+#event-view .duration-time {
+  margin: 1rem 0;
+}
+
+#event-view .current-calendar,
+#event-view .alarms {
+  margin-bottom: 1rem;
+}
+
+#event-view .title .content {
+  font-size: 1.9rem;
+  font-weight: normal;
+  color: #000;
+}
+
+#event-view .description .content {
+  font-size: 1.6rem;
+  color: #333;
+}
+
+#event-view .alarms > .content > div {
+  display: inline-block;
+}
+
+#event-view .alarms.multiple > .content > div {
+  display: block;
+  padding-left: 1.4rem;
+}
+
+#event-view .current-calendar .icon-dot {
+  position: absolute;
+  left: -0.4rem;
+  line-height: 1.8rem;
+  font-size: 5rem;
+}
+
+#event-view .current-calendar .content {
+  margin-left: 1rem;
 }
