--- a/style/ui.css
+++ b/style/ui.css
@@ -120,6 +120,48 @@ body[data-path="/day/"] #view-selector > .day > a:active {
   opacity: 0;
 }
 
+.display-hour.is-hidden {
+  visibility: hidden;
+}
+
+.current-time {
+  pointer-events: none;
+  display: none;
+  position: absolute;
+  width: 100%;
+  color: #008EAB;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  margin-top: -0.6rem;
+}
+
+.current-time.active {
+  display: block;
+}
+
+.current-time:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0.4rem 0 0.4rem 0.6rem;
+  border-color: transparent transparent transparent #008EAB;
+  /* scale is for smooth edges and translate for centering the line */
+  transform: scale(0.99) translateY(0.25rem);
+}
+
+.current-time:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0.6rem;
+  height: 0.1rem;
+  background-color: #008EAB;
+}
+
 /* view loading */
 
 .during-progress {
